<resources>

    <integer name="com_vk_sdk_AppId">7588091</integer>

    <string name="app_name">Local</string>
    <string name="comma">Специально для вас небезызвестные ребята из группы Comma исполнят легендарные хиты парней из Калифорнии! Не знаешь английского? Не беда, ты и так точно знаешь как подпевать под эти трек!</string>
    <string name="contact">Связаться</string>
    <string name="apply">Применить</string>
    <string name="at_day">Днем</string>
    <string name="at_night">Ночью</string>
    <string name="login_via_email">Войти через почту</string>
    <string name="sing_in">Зарегистрироваться</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="email">E-mail</string>
    <string name="password">password</string>
    <string name="login">Войти</string>
    <string name="error_validate_name">Введите имя пользователя</string>
    <string name="error_validate_pass">Введен не корректный пароль</string>
    <string name="error_validate_email">Введен не корректный email</string>
    <string name="alert_title_info">Информация</string>
    <string name="alert_title_error">Ошибка</string>
    <string name="error_validation_common">Ошибка при валидации данных</string>
    <string name="give_name_your_event">Дайте имя вашему\nсобытию</string>
    <string name="add_desc_and_tags">Добавьте описание и теги</string>
    <string name="add_desc">Добавьте описание</string>
    <string name="add_tags">Добавьте тэги</string>
    <string name="choose_date_and_duration">Выберите дату и\nпродолжительность</string>
    <string name="choose_price">Укажите цену</string>
    <string name="choose_place">Укажите адрес</string>
    <string name="add_playlist">Добавьте плейлист</string>
    <string name="add_picture">Добавьте постер</string>
    <string name="hint_create_title">Придумайте какую-нибудь броскую фразу</string>
    <string name="start_date">Дата начала</string>
    <string name="duration">Сколько идет</string>
    <string name="free">Бесплатно</string>
    <string name="choose_on_map">Указать на карте</string>
    <string name="next">Далее</string>
    <string name="create_event">Создать событие</string>
    <string name="liked">Понравившиеся</string>
    <string name="created">Созданные</string>
    <string name="empty_list">Пустой список</string>
    <string name="no_events">Вы еще не поставили\nлайк ни одному событию</string>
    <string name="no_events_try_to_create">Нет событий.\nПопробуйте создать свое</string>
    <string name="create">Создать</string>
    <string name="error_validate_step_1">Введите название</string>
    <string name="error_validate_step_2">Введите описание</string>
    <string name="error_validate_step_tags">Введите любой тэг</string>
    <string name="error_validate_step_3">Введите дату проведения и продолжительность события</string>
    <string name="error_validate_step_4">Введите адрес</string>
    <string name="error_validate_step_5">Нет саундтрека</string>
    <string name="error_validate_step_6">Добавьте хотя бы одну фотографию</string>
    <string name="please_wait">Пожалуйста, подождите...</string>
    <string name="add_tags_hint">Добавьте теги через запятую</string>
    <string name="start_time">Время начала</string>
    <string name="hint_create_desc">Введите краткое описание, чтобы гости могли знать, чего ожидать</string>
    <string name="hint_address">Введите адрес</string>
    <string name="hint_play_list">Введите ссылку на плейлист</string>
    <string name="error_validate_step_price">Введите цену</string>

    <string name="settings">Настройки</string>
    <string name="general_information">Общие сведения</string>
    <string name="contact_details">Контактные данные</string>
    <string name="phone_number">Номер телефона</string>
    <string name="phone_number_whats_app">Номер телефона в WhatsApp</string>
    <string name="telegram_name">\@yourname</string>
    <string name="instagram_yourname">https://instagram.com/yourname</string>

    <string name="chose_connect_method">Выберите способ связи</string>
    <string name="how_to_connect">Как с вами связаться?</string>
    <string name="hint_whatapp">+7 (977) 000-00-00</string>
    <string name="hint_telegram">\@username</string>
    <string name="hint_instagram">\@username</string>
    <string name="hint_phone">+7 (977) 000-00-00</string>
    <string name="error_validate_connect_to">Проверьте правильность введенных данных</string>
    <string name="logout">Выйти</string>
    <string name="enter_with">Войдите с помощью</string>
    <string name="name">Имя</string>
    <string name="events_is_approving">Событие\nна проверке</string>
    <string name="list_is_empty">Кажется, список окончился.\nПопробуйте загрузить еще раз</string>
    <string name="error_validation_phone">Не корректный номер телефона</string>
    <string name="error_validation_contacts_are_empty">Введите хоть один способ связи</string>
    <string name="error_validation_whatup">Не корректный номер Whatsapp</string>


</resources>
