<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="eventBuilder"
                type="com.local.app.data.event.create.EventRaw.Builder" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorMainDark">

        <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="@dimen/back_btn_size"
                android:layout_height="@dimen/back_btn_size"
                android:layout_margin="@dimen/control_margin"
                android:background="@drawable/rect_grey_solid_10dp_corner"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
                android:id="@+id/btn_close"
                android:layout_width="@dimen/back_btn_size"
                android:layout_height="@dimen/back_btn_size"
                android:layout_margin="@dimen/control_margin"
                android:background="@drawable/rect_grey_solid_10dp_corner"
                android:src="@drawable/ic_cross_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/textView2"
                style="@style/App.Text.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/control_big_margin"
                android:text="@string/give_name_your_event"
                app:layout_constraintStart_toStartOf="@+id/btn_back"
                app:layout_constraintTop_toBottomOf="@id/btn_back" />

        <EditText
                android:id="@+id/et_input_title"
                style="@style/App.EditText"
                android:layout_width="0dp"
                android:layout_height="@dimen/et_min_height"
                android:layout_marginTop="@dimen/control_medium_margin"
                android:hint="@string/hint_create_title"
                android:text="@{eventBuilder.title}"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@id/textView2" />


        <TextView
                android:id="@+id/btn_next"
                style="@style/App.Button.Colored.Green"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_next_height"
                android:layout_marginStart="@dimen/control_margin"
                android:layout_marginEnd="@dimen/control_margin"
                android:layout_marginBottom="@dimen/control_big_margin"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>