<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMainDark">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="@dimen/back_btn_size"
            android:layout_height="@dimen/back_btn_size"
            android:layout_margin="@dimen/control_margin"
            android:background="@drawable/rect_grey_solid_10dp_corner"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="@dimen/back_btn_size"
            android:layout_height="@dimen/back_btn_size"
            android:layout_margin="@dimen/control_margin"
            android:background="@drawable/rect_grey_solid_10dp_corner"
            android:src="@drawable/ic_cross_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btn_next"
            style="@style/App.Button.Colored.Green"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_next_height"
            android:layout_marginStart="@dimen/control_margin"
            android:layout_marginEnd="@dimen/control_margin"
            android:layout_marginBottom="@dimen/control_big_margin"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_add_tags_label"
            style="@style/App.Text.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/control_margin"
            android:text="@string/add_tags"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_back" />


        <EditText
            android:id="@+id/et_input_tags"
            style="@style/App.EditText.CreateEvent.Big"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:gravity="start|center"
            android:singleLine="true"
            android:layout_margin="@dimen/control_medium_margin"
            android:paddingStart="@dimen/control_medium_margin"
            android:paddingEnd="48dp"
            android:hint="@string/add_tags_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_add_tags_label" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_tag"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:enabled="false"
            android:layout_margin="@dimen/control_margin"
            android:background="@drawable/selector_accent_button"
            android:elevation="50dp"
            android:gravity="center"
            android:text="+"
            app:layout_constraintBottom_toBottomOf="@id/et_input_tags"
            app:layout_constraintEnd_toEndOf="@id/et_input_tags"
            app:layout_constraintTop_toTopOf="@id/et_input_tags" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chips_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/control_medium_margin"
            app:layout_constraintTop_toBottomOf="@id/et_input_tags" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>